# OPL_Lab

./: .gitignore  CMakeLists.txt  build.bat  build_cxx_exe.bat  main.cpp
src/: Measurement.h
src/algorithms/: Insertionsort.h  Mergesort.h  MinimumSearch.h  Quicksort.h  SelectionSort.h
src/utils/: ArrayFiller.h  Timer.h
test/: ArrayFiller.cpp  CMakeLists.txt  InsertionSortTest.cpp  MergeSortTest.cpp  MinimumSearchTest.cpp  QuickSortTest.cpp  SelectionSortTest.cpp
